# TKOM

./: .gitignore  CMakeLists.txt  TokenType.h  a.out  build.sh  lex.yy.cc  main.cc  plik  scan.y  test_html.html
exception/: PerrorException.hpp
malwrAnalysis/: MalwrAnalyzer.cpp  MalwrAnalyzer.h  MalwrDTO.cpp  MalwrDTO.h
parser/: Parser.cpp  Parser.h
scanner/: Scanner.cpp  Scanner.h
token/: Token.hpp  TokenType.h
treeObjects/: Component.h  Component.hpp  Doctype.h  Doctype.hpp  HtmlAttribute.h  HtmlAttribute.hpp  HtmlDocument.h  HtmlDocument.hpp
